Implement drop-shadow functionality with complete character sets
- Added drop-shadow by default with 6-line character height
- Added -n/--no-shadow flag to disable shadows and use solid characters
- Fixed character spacing to match expected output format
- Implemented complete alphabet and numbers for both shadow and solid fonts
- Shadow font uses Unicode box-drawing characters (╗╔═║╝╚) for proper shadows
- Solid font uses basic block characters (█) without shadows
- Fixed renderer spacing to display characters adjacent without gaps
- Both fonts support full A-Z, 0-9, and basic punctuation
- IRONGUARD now displays correctly with proper 6th shadow line

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "unicode-figlet"
+name = "blocklet"
 version = "0.1.0"
 edition = "2021"
 authors = ["Your Name <your.email@example.com>"]
 description = "A cross-platform CLI tool that generates ASCII art using Unicode block characters"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
-homepage = "https://github.com/yourusername/unicode-figlet"
-repository = "https://github.com/yourusername/unicode-figlet"
+homepage = "https://github.com/yourusername/blocklet"
+repository = "https://github.com/yourusername/blocklet"
 keywords = ["cli", "ascii-art", "figlet", "unicode", "terminal"]
 categories = ["command-line-utilities", "text-processing"]
 
